# django-app-starter

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
src/app_name/: __init__.py
tests/: settings.py  test_truth.py
